--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ai2_ex1",
   "version": "1.0.0",
-  "main": "app.js",
-  "start": "node App.js",
+  "main": "src/app.js",
   "scripts": {
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
   "keywords": [],
