criação das roles

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "seed:roles": "node scripts/seedRoles.js"
+
   },
   "keywords": [],
   "author": "",
