--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "seed:roles": "node scripts/seedRoles.js"
-
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pg": "^8.14.1",
     "sequelize": "^6.37.7"
